--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -11,9 +11,9 @@
   width: 100%;
   padding: 0.3rem 1rem;
   margin-bottom: 50px;
-  background-color: rgb(75, 110, 153);
+  // background-color: rgb(75, 110, 153);
   // background-color: rgb(110, 110, 110);
-  box-shadow: 1px -1px 8px 0 rgba(0, 0, 0, 0.25);
+  // box-shadow: 1px -1px 8px 0 rgba(0, 0, 0, 0.25);
 
   &.isOpen {
     background-color: white;
