--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -1,16 +1,16 @@
 .container {
-  max-width: 750px;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  margin-bottom: 80px;
+    max-width: 750px;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-bottom: 80px;
 }
 
 .posts {
-  list-style-type: none;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
+    list-style-type: none;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 
 .post {
@@ -18,19 +18,14 @@
   display: flex;
   padding: 16px 0 48px 0;
   border-top: 1px solid rgb(235, 235, 235);
+  text-decoration: none;
+  color: inherit;
+  box-shadow: none;
 
   @media only screen and (max-width: 750px) {
     width: 100%;
     flex-direction: column;
   }
-
-  a {
-    color: inherit;
-    display: block;
-    text-decoration: none;
-    display: flex;
-    flex-direction: column;
-    box-shadow: none;
 
     h2 {
       margin-bottom: 0.85rem;
@@ -38,7 +33,7 @@
       line-height: 1.2;
     }
 
-    > p {
+    p {
       margin-bottom: 0.85rem;
       font-size: 18px;
       color: rgb(110, 110, 110);
@@ -49,15 +44,10 @@
     &:hover {
       transition: 0.3s;
 
-      // .image {
-      //     box-shadow: 1px -1px 10px 0 rgba(0, 0, 0, 0.25);
-      // }
-
       h2 {
         color: rgb(110, 110, 110);
       }
     }
-  }
 }
 
 .date-and-reading-time-div {
@@ -126,7 +116,7 @@
     padding: 3px 10px;
     background-color: #f0f0f0;
     border-radius: 4px;
-    border: 1px solid rgba(0, 0, 0, 0.05);
+    // border: 1px solid rgba(0, 0, 0, 0.05);
     line-height: 1.8em;
     padding: 3px 8px;
 
@@ -138,3 +128,32 @@
     }
   }
 }
+
+
+// .tags {
+//   list-style: none;
+//   margin: 0;
+//   display: flex;
+//   flex-wrap: wrap;
+
+//   li {
+//     color: rgb(75, 110, 153);
+//     font-weight: 700;
+//     font-size: 14px;
+//     margin-right: 0.7rem;
+//     white-space: nowrap;
+//     padding: 3px 10px;
+//     // background-color: #f0f0f0;
+//     border-radius: 4px;
+//     // border: 1px solid rgba(0, 0, 0, 0.05);
+//     line-height: 1.8em;
+//     padding: 3px 8px;
+
+//     &:hover {
+//       transition: 0.3s;
+//       cursor: pointer;
+//       color: white;
+//       background-color: rgb(75, 110, 153);
+//     }
+//   }
+// }
