--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -3,6 +3,8 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+//   background-color: #1e242e;
+//   color: white;
 }
 
 .headerContainer {
