--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -15,7 +15,7 @@
   p {
     font-size: 18px;
     color: rgb(110, 110, 110);
-    color: inherit;
+    // color: inherit;
     margin-bottom: 1.5rem;
     // border-top: 1px solid rgb(235, 235, 235);
   }
