--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -22,6 +22,7 @@
 
   .link {
     text-decoration: none;
+    text-align: center;
     cursor: pointer;
     // background-color: #6e6e6e;
     background-color: rgb(75, 110, 153);
