--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -29,7 +29,7 @@
         color: inherit;
         color: white;
         box-shadow: none;
-        // border-radius: 5px;
+        border-radius: 4px;
         font-size: 18px;
         padding: 13px 0;
         width: 220px;
