--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -3,158 +3,64 @@
     padding-left: 1rem;
     padding-right: 1rem;
     margin-bottom: 80px;
-}
 
-.posts {
-    list-style-type: none;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-
-.post {
-    margin: 0;
-    display: flex;
-    padding: 16px 0 48px 0;
-    border-top: 1px solid rgb(235, 235, 235);
-    text-decoration: none;
-    color: inherit;
-    box-shadow: none;
-
-    @media only screen and (max-width: 750px) {
-        width: 100%;
+    > div {
+        display: flex;
         flex-direction: column;
-    }
+        justify-content: center;
+        width: 100%;
 
-    h2 {
-        margin-bottom: 0.85rem;
-        font-size: 24px;
-        line-height: 1.2;
-    }
+        a {
+            display: flex;
+            width: 100%;
+            margin: 0;
+            padding: 16px 0 48px 0;
+            border-top: 1px solid rgb(235, 235, 235);
+            text-decoration: none;
+            color: inherit;
+            box-shadow: none;
 
-    p {
-        margin-bottom: 0.85rem;
-        font-size: 18px;
-        color: rgb(110, 110, 110);
-        line-height: 1.5;
-        line-height: 1.7em;
-    }
+            &:hover {
+                transition: 0.3s;
 
-    &:hover {
-        transition: 0.3s;
+                h2 {
+                    color: rgb(110, 110, 110);
+                }
+            }
 
-        h2 {
-            color: rgb(110, 110, 110);
+            @media only screen and (max-width: 750px) {
+                flex-direction: column;
+            }
+
+            div {
+                width: 100%;
+
+                h2 {
+                    margin-bottom: 0.85rem;
+                    font-size: 24px;
+                    line-height: 1.2;
+                }
+
+                p {
+                    margin-bottom: 0.85rem;
+                    font-size: 18px;
+                    color: rgb(110, 110, 110);
+                    line-height: 1.7em;
+                }
+
+                &:first-child {
+                    margin-right: 24px;
+
+                    @media only screen and (max-width: 750px) {
+                        margin-right: 0;
+                        margin-bottom: 0.85rem;
+                    }
+                }
+            }
+
+            img {
+                border-radius: 4px;
+            }
         }
     }
 }
-
-.date-and-reading-time-div {
-    display: flex;
-    flex-direction: column;
-    // min-width: 135px;
-    margin-right: 24px;
-    font-size: 18px;
-    line-height: 1.5;
-    color: rgb(110, 110, 110);
-
-    > p {
-        margin-bottom: 0.5rem;
-    }
-
-    @media only screen and (max-width: 750px) {
-        margin-right: 0;
-    }
-}
-
-.image-container {
-    margin-top: 0.5rem;
-
-    @media only screen and (max-width: 750px) {
-        margin-bottom: 0.85rem;
-    }
-}
-
-.image {
-    box-shadow: none;
-    border-radius: 4px;
-    width: 100%;
-}
-
-.flex-container {
-    display: flex;
-    flex-direction: column;
-}
-
-.description-date-div {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.title-squared-div,
-.date-rectangular-div {
-    width: 43px;
-    height: 43px;
-    background-color: rgba(0, 0, 255, 0.25);
-
-    @media only screen and (max-width: 750px) {
-        width: 40px;
-        height: 40px;
-    }
-}
-
-.tags {
-    list-style: none;
-    margin: 0;
-    display: flex;
-    flex-wrap: wrap;
-
-    li {
-        font-size: 14px;
-        margin-right: 0.7rem;
-        white-space: nowrap;
-        padding: 3px 10px;
-        background-color: #f0f0f0;
-        border-radius: 4px;
-        // border: 1px solid rgba(0, 0, 0, 0.05);
-        line-height: 1.8em;
-        padding: 3px 8px;
-
-        &:hover {
-            transition: 0.3s;
-            cursor: pointer;
-            color: white;
-            background-color: rgb(75, 110, 153);
-        }
-    }
-}
-
-// .tags {
-//   list-style: none;
-//   margin: 0;
-//   display: flex;
-//   flex-wrap: wrap;
-
-//   li {
-//     color: rgb(75, 110, 153);
-//     font-weight: 700;
-//     font-size: 14px;
-//     margin-right: 0.7rem;
-//     white-space: nowrap;
-//     padding: 3px 10px;
-//     // background-color: #f0f0f0;
-//     border-radius: 4px;
-//     // border: 1px solid rgba(0, 0, 0, 0.05);
-//     line-height: 1.8em;
-//     padding: 3px 8px;
-
-//     &:hover {
-//       transition: 0.3s;
-//       cursor: pointer;
-//       color: white;
-//       background-color: rgb(75, 110, 153);
-//     }
-//   }
-// }
