--- a/src/components/newsletter.module.scss
+++ b/src/components/newsletter.module.scss
@@ -3,36 +3,29 @@
     padding-left: 1rem;
     padding-right: 1rem;
     margin-bottom: 5rem;
-
-    > div {
-        background-color: #f0f0f0;
-        padding: 2rem;
-    }
+    margin-top: 2rem;
 
     form {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        // align-items: center;
         margin-bottom: 0;
     }
 
     input {
-        box-shadow: none;
-        background: none;
         outline: none;
-        // border: 1px solid rgb(220, 220, 220);
         border: none;
-        background-color: white;
-        height: 47px;
-        margin-top: 15px;
-        width: 220px;
-        padding: 0 10px;
-        // color: rgb(75, 110, 153);
-        // font-weight: bold;
+        background-color: rgb(235, 235, 235);
+        margin-bottom: 8px;
+        height: 75px;
+        border-radius: 8px;
+        padding: 16px;
+        max-width: 350px;
+    }
 
-        // ::placeholder {
-        //     color: inherit;
-        // }
+    label {
+        font-size: 18px;
+        margin-bottom: 8px;
     }
 
     input:-webkit-autofill {
@@ -40,21 +33,11 @@
         box-shadow: 0 0 0 30px white inset !important;
     }
 
-    // label {
-    //     display: flex;
-    //     flex-direction: column;
-    //     text-align: center;
-    //     font-size: 18px;
-    //     margin-top: 15px;
-    // }
-
     button {
         cursor: pointer;
         text-align: center;
         background-color: rgb(75, 110, 153);
-        // background-color: white;
         color: white;
-        // color: rgb(75, 110, 153);
         box-shadow: none;
         font-size: 18px;
         padding: 13px 0;
@@ -62,6 +45,7 @@
         border: none;
         margin-top: 15px;
         font-weight: bold;
+        border-radius: 4px;
 
         &:hover {
             transition: 0.3s;
@@ -73,14 +57,6 @@
     .success {
         margin-top: 10px;
         margin-bottom: 0;
-        color: rgb(75, 110, 153);
+        // color: rgb(75, 110, 153);
     }
-
-    // .error {
-    //     color: red;
-    // }
-
-    // .success {
-    //     color: rgb(75, 110, 153);
-    // }
 }
