--- a/src/components/newsletter.module.scss
+++ b/src/components/newsletter.module.scss
@@ -8,14 +8,13 @@
     form {
         display: flex;
         flex-direction: column;
-        // align-items: center;
         margin-bottom: 0;
     }
 
     input {
         outline: none;
         border: none;
-        background-color: rgb(235, 235, 235);
+        background-color: var(--border);
         margin-bottom: 8px;
         height: 75px;
         border-radius: 8px;
@@ -36,7 +35,7 @@
     button {
         cursor: pointer;
         text-align: center;
-        background-color: rgb(75, 110, 153);
+        background-color: var(--button-background);
         color: white;
         box-shadow: none;
         font-size: 18px;
@@ -49,7 +48,7 @@
 
         &:hover {
             transition: 0.3s;
-            background-color: rgb(47, 82, 126);
+            background-color: var(--button-background-hover);
         }
     }
 
@@ -57,6 +56,5 @@
     .success {
         margin-top: 10px;
         margin-bottom: 0;
-        // color: rgb(75, 110, 153);
     }
 }
