--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -43,8 +43,7 @@ code {
     }
 
     a {
-        color: inherit;
-        color: rgb(75, 110, 153);
+        color: var(--button-background);
         font-weight: 700;
         padding: 3px 5px;
         text-decoration: none;
