--- a/src/templates/blog.module.scss
+++ b/src/templates/blog.module.scss
@@ -22,9 +22,9 @@
         color: var(--text-primary);
     }
 
-    p:first-of-type {
-        color: var(--text-secondary);
-    }
+    // p:first-of-type {
+    //     color: var(--text-secondary);
+    // }
 
     img {
         border-radius: 4px;
