--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
 }
 
 .headerContainer {
@@ -27,6 +26,13 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    // max-width: 964px; // 1000 - 16 - 16
-    max-width: 718px; // 750 - 16 - 16
+    position: fixed;
+    top: 0;
+    background-color: rgba(255, 255, 255, 0.7);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    z-index: 2;
+    box-shadow: 0 2px 2px 0 var(--border);
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
