--- a/src/components/newsletter.module.scss
+++ b/src/components/newsletter.module.scss
@@ -49,7 +49,7 @@
         border: none;
         margin-top: 15px;
         font-weight: bold;
-        border-radius: 4px;
+        border-radius: var(--border-radius);
 
         &:hover {
             transition: 0.3s;
