--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -62,7 +62,7 @@
             }
 
             img {
-                border-radius: 4px;
+                border-radius: var(--border-radius);
             }
         }
     }
