--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -28,7 +28,7 @@
         color: var(--button-color);
         background-color: var(--button-background);
         box-shadow: none;
-        border-radius: 4px;
+        border-radius: var(--border-radius);
         font-size: 18px;
         padding: 13px 0;
         width: 220px;
