--- a/src/styles/colours.scss
+++ b/src/styles/colours.scss
@@ -7,6 +7,7 @@ body {
     --button-background-hover: rgb(47, 82, 126);
     --border: rgb(235, 235, 235);
     --navbar-height: 80px;
+    --border-radius: 8px;
 }
 
 body.dark {
