--- a/src/styles/index copy.scss
+++ b/src/styles/index copy.scss
@@ -614,7 +614,7 @@ tt,
 code {
     background: #f0f0f0;
     color: rgb(75, 110, 153);
-    border-radius: 4px;
+    border-radius: var(--border-radius);
     // border: 1px solid rgba(0, 0, 0, 0.05);
     font-family: "SFMono-Regular", Consolas, "Inter Mono", "Droid Sans Mono",
         "Liberation Mono", Menlo, Courier, monospace;
