--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -8,7 +8,6 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    padding: 0.3rem 1rem;
     margin-bottom: 50px;
 
     &.isOpen {
@@ -25,14 +24,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     width: 100%;
+    height: var(--header-height);
     position: fixed;
     top: 0;
     background-color: rgba(255, 255, 255, 0.7);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     z-index: 2;
-    box-shadow: 0 2px 2px 0 var(--border);
-    padding-left: 1rem;
-    padding-right: 1rem;
+    // box-shadow: 0 2px 2px 0 var(--border);
+    border-bottom: 1px solid var(--border);
+    padding: 0 1rem;
+
+    @media (max-width: 750px) {
+        box-shadow: none;
+    }
 }
