--- a/src/components/newsletter.module.scss
+++ b/src/components/newsletter.module.scss
@@ -3,7 +3,7 @@
     padding-left: 1rem;
     padding-right: 1rem;
     margin-bottom: 5rem;
-    margin-top: 2rem;
+    // border-top: 1px solid var(--border);
 
     h2,
     p {
@@ -30,6 +30,7 @@
     label {
         font-size: 18px;
         margin-bottom: 8px;
+        font-weight: 700;
     }
 
     input:-webkit-autofill {
@@ -37,7 +38,9 @@
         box-shadow: 0 0 0 30px white inset !important;
     }
 
-    button {
+    button,
+    a {
+        text-decoration: none;
         cursor: pointer;
         text-align: center;
         background-color: var(--button-background);
@@ -50,6 +53,7 @@
         margin-top: 15px;
         font-weight: bold;
         border-radius: var(--border-radius);
+        min-width: 250px;
 
         &:hover {
             transition: 0.3s;
