--- a/src/components/navbar.module.scss
+++ b/src/components/navbar.module.scss
@@ -23,7 +23,7 @@
         display: flex;
         align-items: center;
         list-style-type: none;
-        margin-bottom: 0;
+        margin: 0;
 
         li {
             margin-left: 20px;
@@ -41,6 +41,11 @@
                 color: var(--text-secondary);
             }
         }
+    }
+
+    span {
+        visibility: hidden;
+        font-size: 1px;
     }
 }
 
