--- a/src/components/newsletter.module.scss
+++ b/src/components/newsletter.module.scss
@@ -14,6 +14,25 @@
         display: flex;
         flex-direction: column;
         margin-bottom: 0;
+
+        > div {
+            display: flex;
+            justify-content: space-between;
+
+            > div {
+                display: flex;
+                flex-direction: column;
+                width: 49%;
+            }
+
+            @media only screen and (max-width: 750px) {
+                flex-direction: column;
+
+                > div {
+                    width: 100%;
+                }
+            }
+        }
     }
 
     input {
@@ -24,7 +43,7 @@
         height: 75px;
         border-radius: 8px;
         padding: 16px;
-        max-width: 350px;
+        font-size: 18px;
     }
 
     label {
@@ -64,5 +83,8 @@
     .success {
         margin-top: 10px;
         margin-bottom: 0;
+        color: rgb(136, 63, 52);
+        font-weight: bold;
+        font-size: 15px;
     }
 }
