--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -41,3 +41,15 @@
         box-shadow: none;
     }
 }
+
+.childrenContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-top: var(--header-height);
+
+    @media only screen and (max-width: 750px) {
+        margin-top: 30px;
+    }
+}
