--- a/src/components/newsletter.module.scss
+++ b/src/components/newsletter.module.scss
@@ -92,3 +92,13 @@
         color: rgb(44, 117, 44);
     }
 }
+
+.profileImageLink {
+    &:hover {
+        opacity: 0.8;
+    }
+
+    @media only screen and (max-width: 750px) {
+        display: none;
+    }
+}
