--- a/src/components/newsletter.module.scss
+++ b/src/components/newsletter.module.scss
@@ -39,7 +39,9 @@
         outline: none;
         border: none;
         background-color: var(--border);
-        margin-bottom: 8px;
+        background-color: var(--code-background);
+        border: 1px solid var(--code-border-color);
+        margin-bottom: 16px;
         height: 75px;
         border-radius: 8px;
         padding: 16px;
@@ -63,6 +65,7 @@
         cursor: pointer;
         text-align: center;
         background-color: var(--button-background);
+        background-color: var(--primary-color);
         color: white;
         box-shadow: none;
         font-size: 18px;
@@ -73,10 +76,10 @@
         font-weight: 600;
         border-radius: var(--border-radius);
 
-        &:hover {
-            transition: 0.3s;
-            background-color: var(--button-background-hover);
-        }
+        // &:hover {
+        //     transition: 0.3s;
+        //     background-color: var(--button-background-hover);
+        // }
     }
 
     .error,
